--- a/trunk/jsidplay2/res/index.htm
+++ b/trunk/jsidplay2/res/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 //EN">
 <html>
 <head>
-<link rel="shortcut icon" href="http://jsidplay2.sourceforge.net/jsidplay2.png"> 
+<link rel="shortcut icon" href="@server_url@jsidplay2.png"> 
 <meta name="description" content="Java SID music player library v2">
 <meta name="author" content="Ken H&auml;ndel">
 <meta name="keywords" content="c64, emulator, java, music, sid, psid, commodore 64, jsidplay2, resid, resid-fp, chip tune">
@@ -85,7 +85,7 @@ To browse visit <a href="http://ss.webring.com/navbar?f=l;y=kenchis;u=defurl2">
 here</a>.</font></td></tr></table></td></tr></table></center></noscript>
 
 <P align=center><FONT size=7><A 
-href="https://sourceforge.net/projects/jsidplay2/">JSIDPlay2</A> - Homepage (modification date: 21.03.2012)</FONT></P>
+href="https://sourceforge.net/projects/jsidplay2/">JSIDPlay2</A> - Homepage (modification date: 03.10.2012)</FONT></P>
 <P align=left><FONT size=6>Introduction:</FONT></P>
 <P align=left><FONT size=4>I am a C64 fan since 1986 as many other people are. I 
 played games, watched demos and read books, but when the time goes by, all 
@@ -180,9 +180,9 @@ Interface</A> page.</P>
   <DIV align=left><FONT size=4>Enable java in your browser</FONT></DIV></LI>
   <LI>
   <DIV align=left><FONT size=4>Click here to <A 
-  href="http://jsidplay2.sourceforge.net/jsidplay2.jnlp">launch and install</A> 
+  href="@server_url@jsidplay2.jnlp">launch and install</A> 
   JSIDPlay2 or click <A 
-  href="http://jsidplay2.sourceforge.net/jsidplay2.html"><FONT 
+  href="@server_url@jsidplay2.html"><FONT 
   color=#0066cc>here</FONT></A> to start it embedded into your browser without any installation</FONT></DIV>
 </OL>
 
@@ -206,12 +206,12 @@ download</FONT></P>
   <LI>
   <DIV align=left><FONT size=4>If you want to embed the player without a graphical user interface into your own web-page,
   just check out the <A 
-  href="http://jsidplay2.sourceforge.net/C64Jukebox/SIDPlay.html">JavaScript API test page</A>.</FONT></DIV></LI>
+  href="@server_url@C64Jukebox/SIDPlay.html">JavaScript API test page</A>.</FONT></DIV></LI>
   <LI>
   <DIV align=left><FONT size=4>If you want to compare the quality of this emulation with the real thing
   and own a <A href="http://www.hardsid.com/">HardSID4U</A> soundcard,
   then just download and start <A href="http://www.acid64.com">ACID64</A> (by Wilfred Bos) the recommended music player to play SID tunes on a real SID chip
-  and additionally download the <A href="http://jsidplay2.sourceforge.net/jsiddevice.zip">Network SID Device</A> (part of JSIDPlay2).
+  and additionally download the <A href="@server_url@jsiddevice.zip">Network SID Device</A> (part of JSIDPlay2).
   Now, using ACID64 you are able to switch between the real SID chip playback and the emulation on the fly.</FONT></DIV></LI>
 </UL>
 
