--- a/trunk/jsidplay2/src/main/deploy/jsidplay2/index.htm
+++ b/trunk/jsidplay2/src/main/deploy/jsidplay2/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 //EN">
 <html>
 <head>
-<link rel="shortcut icon" href="@server_url@jsidplay2.png"> 
+<link rel="shortcut icon" href="${server.url}jsidplay2.png"> 
 <meta name="description" content="Java SID music player library v2">
 <meta name="author" content="Ken H&auml;ndel">
 <meta name="keywords" content="c64, emulator, java, music, sid, psid, commodore 64, jsidplay2, resid, resid-fp, chip tune">
@@ -180,10 +180,8 @@ Interface</A> page.</P>
   <DIV align=left><FONT size=4>Enable java in your browser</FONT></DIV></LI>
   <LI>
   <DIV align=left><FONT size=4>Click here to <A 
-  href="@server_url@jsidplay2.jnlp">launch and install</A> 
-  JSIDPlay2 or click <A 
-  href="@server_url@jsidplay2.html"><FONT 
-  color=#0066cc>here</FONT></A> to start it embedded into your browser without any installation</FONT></DIV>
+  href="${server.url}jsidplay2.jnlp">launch and install</A> 
+  JSIDPlay2 </DIV>
 </OL>
 
 <P align=left><FONT size=6>Download Version 2.5 (Stable 2012)</FONT></P>
@@ -206,12 +204,12 @@ download</FONT></P>
   <LI>
   <DIV align=left><FONT size=4>If you want to embed the player without a graphical user interface into your own web-page,
   just check out the <A 
-  href="@server_url@C64Jukebox/SIDPlay.html">JavaScript API test page</A>.</FONT></DIV></LI>
+  href="${server.url}SIDPlay.htm">JavaScript API test page</A>.</FONT></DIV></LI>
   <LI>
   <DIV align=left><FONT size=4>If you want to compare the quality of this emulation with the real thing
   and own a <A href="http://www.hardsid.com/">HardSID4U</A> soundcard,
   then just download and start <A href="http://www.acid64.com">ACID64</A> (by Wilfred Bos) the recommended music player to play SID tunes on a real SID chip
-  and additionally download the <A href="@server_url@jsiddevice.zip">Network SID Device</A> (part of JSIDPlay2).
+  and additionally download the <A href="${server.url}jsiddevice.zip">Network SID Device</A> (part of JSIDPlay2).
   Now, using ACID64 you are able to switch between the real SID chip playback and the emulation on the fly.</FONT></DIV></LI>
 </UL>
 
