--- a/trunk/jsidplay2/src/main/deploy/jsidplay2/index.htm
+++ b/trunk/jsidplay2/src/main/deploy/jsidplay2/index.htm
@@ -209,7 +209,7 @@ download</FONT></P>
   <DIV align=left><FONT size=4>If you want to compare the quality of this emulation with the real thing
   and own a <A href="http://www.hardsid.com/">HardSID4U</A> soundcard,
   then just download and start <A href="http://www.acid64.com">ACID64</A> (by Wilfred Bos) the recommended music player to play SID tunes on a real SID chip
-  and additionally download the <A href="${server.url}jsiddevice.zip">Network SID Device</A> (part of JSIDPlay2).
+  and additionally download the <A href="${server.url}jsiddevice.jar">Network SID Device</A> (part of JSIDPlay2).
   Now, using ACID64 you are able to switch between the real SID chip playback and the emulation on the fly.</FONT></DIV></LI>
 </UL>
 
