--- a/trunk/jsidplay2/src/main/deploy/jsidplay2/index.htm
+++ b/trunk/jsidplay2/src/main/deploy/jsidplay2/index.htm
@@ -180,7 +180,7 @@ Interface</A> page.</P>
   <DIV align=left><FONT size=4>Enable java in your browser</FONT></DIV></LI>
   <LI>
   <DIV align=left><FONT size=4>Click here to <A 
-  href="${server.url}jsidplay2.jnlp">launch and install</A> 
+  href="${server.url}jsidplay2-3.0.jnlp">launch and install</A> 
   JSIDPlay2 </DIV>
 </OL>
 
