--- a/trunk/jsidplay2/src/main/deploy/jsidplay2/index.htm
+++ b/trunk/jsidplay2/src/main/deploy/jsidplay2/index.htm
@@ -168,21 +168,10 @@ Interface</A> page.</P>
   <DIV align=left><FONT size=4>being used like a real C64 (watching demos, playing games etc.)</FONT></DIV></LI>
   </UL>
 
-  <P align=left><FONT size=6>Live Demo - Latest beta (often stable)</FONT></P>
-<OL>
-  <LI>
-  <DIV align=left><FONT size=4>Be sure you have installed at least Java 6</FONT></DIV></LI>
-  <LI>
-  <DIV align=left><FONT size=4>Uninstall previous version
-  (1st Go to the control panel and Double Click Java, 2nd Click on "Settings...", 3rd Click on "Delete Files...", 4th Click OK to remove temporary files).
-  </FONT></DIV></LI>
-  <LI>
-  <DIV align=left><FONT size=4>Enable java in your browser</FONT></DIV></LI>
-  <LI>
+  <P align=left><FONT size=6>Live Demo - Latest Beta (often stable)</FONT></P>
   <DIV align=left><FONT size=4>Click here to <A 
-  href="${server.url}jsidplay2-3.0.jnlp">launch and install</A> 
-  JSIDPlay2 </DIV>
-</OL>
+  href="${server.url}${project.name}-${project.version}.zip">Download</A> 
+  JSIDPlay2 </FONT></DIV>
 
 <P align=left><FONT size=6>Download Version 2.5 (Stable 2012)</FONT></P>
 <P align=left><FONT size=4>Click <A 
@@ -209,7 +198,7 @@ download</FONT></P>
   <DIV align=left><FONT size=4>If you want to compare the quality of this emulation with the real thing
   and own a <A href="http://www.hardsid.com/">HardSID4U</A> soundcard,
   then just download and start <A href="http://www.acid64.com">ACID64</A> (by Wilfred Bos) the recommended music player to play SID tunes on a real SID chip
-  and additionally download the <A href="${server.url}jsiddevice.jar">Network SID Device</A> (part of JSIDPlay2).
+  and additionally download the <A href="${server.url}jsiddevice-${project.version}.jar">Network SID Device</A> (part of JSIDPlay2).
   Now, using ACID64 you are able to switch between the real SID chip playback and the emulation on the fly.</FONT></DIV></LI>
 </UL>
 
@@ -233,7 +222,7 @@ download</FONT></P>
     <TR>
 	<TD> <A href="http://mac.softpedia.com/progClean/JSidplay2-Clean-60694.html"><IMG alt="JSidplay2 2.0 - SOFTPEDIA &quot;100% FREE&quot; AWARD"  hspace=0 src="softpedia_free_award_f.gif" align="bottom"  border=0 width=100% height=100%> </A> </TD>
 	<TD> <A href="http://download.famouswhy.com/jsidplay2/" ><img src="http://download.famouswhy.com/awards/famouswhy_pickaward.gif" alt="Famous Software Download" ></A>
-	     <A href="http://download.famouswhy.com/publisher/kenchis/" alt="Short Interview with me"><IMG src="http://download.famouswhy.com/account_images/public_profile/interview.gif" alt="Short Interview"></IMG></A> </TD>
+	     <A href="http://download.famouswhy.com/publisher/kenchis/" ><IMG src="http://download.famouswhy.com/account_images/public_profile/interview.gif" alt="Short Interview"></IMG></A> </TD>
 	<TD> <A href="http://www.geardownload.com/multimedia/jsidplay2.html"><IMG alt="JSIDPlay2 - 5 stars rated on GearDownload.com"  hspace=0 src="http://www.geardownload.com/images/5starsc.jpg" align="bottom"  border=0 width=40% height=40%> </A> </TD>
 	<TD> <A href="http://mac.wareseeker.com/Utilities/jsidplay2-2.0.zip/c8c55e258"><IMG alt="JSIDPlay2 - Editor's Pick at WareSeeker.com"  hspace=0 src="http://image.wareseeker.com/images_icon/editor_pick.gif" align="bottom"> </A> </TD>
 	</TR>
