--- a/trunk/jsidplay2/src/main/deploy/jsidplay2/index.htm
+++ b/trunk/jsidplay2/src/main/deploy/jsidplay2/index.htm
@@ -260,6 +260,14 @@ download</FONT></P>
 	  <IMG alt="Video2"  hspace=0 src="Video2.jpg" align="bottom"  border=0 width=80% height=80%>
 	</TD>
 	</TR>
+  <TR>
+    <TD>
+	  <IMG alt="Demos"  hspace=0 src="Demos.jpg" align="bottom"  border=0 width=80% height=80%>
+	</TD>
+    <TD>
+	  <IMG alt="GameBase64"  hspace=0 src="GameBase64.jpg" align="bottom"  border=0 width=80% height=80%>
+	</TD>
+	</TR>
   </TABLE>
   
 
