--- a/trunk/jsidplay2/src/main/deploy/jsidplay2/index.htm
+++ b/trunk/jsidplay2/src/main/deploy/jsidplay2/index.htm
@@ -168,22 +168,17 @@ Interface</A> page.</P>
   <DIV align=left><FONT size=4>being used like a real C64 (watching demos, playing games etc.)</FONT></DIV></LI>
   </UL>
 
-  <P align=left><FONT size=6>Live Demo - Latest Beta (often stable)</FONT></P>
+  <P align=left><FONT size=6>Latest Beta</FONT></P>
   <DIV align=left><FONT size=4>Click here to <A 
   href="${project.url}${project.name}-${project.version}.zip">Download</A> 
   JSIDPlay2 </FONT></DIV>
 
-<P align=left><FONT size=6>Download Version 2.5 (Stable 2012)</FONT></P>
-<P align=left><FONT size=4>Click <A 
-href="https://sourceforge.net/projects/jsidplay2/">here</A> to 
-download</FONT></P>
+  <P align=left><FONT size=6>Java WebStart Live Demo - Latest Beta</FONT></P>
+  <DIV align=left><FONT size=4>Click here to <A 
+  href="${project.url}${application.title}.html">Launch</A> 
+  JSIDPlay2 </FONT></DIV>
 
-<P align=left><FONT size=6>Download Version 2.0 (Stable 2010)</FONT></P>
-<P align=left><FONT size=4>Click <A 
-href="https://sourceforge.net/projects/jsidplay2/">here</A> to 
-download</FONT></P>
-
-<P align=left><FONT size=6>Download Version 1.4 (Stable 2007)</FONT></P>
+<P align=left><FONT size=6>Releases</FONT></P>
 <P align=left><FONT size=4>Click <A 
 href="https://sourceforge.net/projects/jsidplay2/">here</A> to 
 download</FONT></P>
