--- a/trunk/jsidplay2service/src/main/webapp/index.html
+++ b/trunk/jsidplay2service/src/main/webapp/index.html
@@ -18,6 +18,6 @@
 
 <html>
 <head>
-<meta http-equiv="Refresh" content="0; URL=JSIDPlay2">
+<meta http-equiv="Refresh" content="0; URL=JSIDPlay2SRV">
 </head>
 </html>
