--- a/trunk/jsidplay2/src/main/deploy/jsidplay2/index.htm
+++ b/trunk/jsidplay2/src/main/deploy/jsidplay2/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 //EN">
 <html>
 <head>
-<link rel="shortcut icon" href="${project.url}jsidplay2.png"> 
+<link rel="shortcut icon" href="${codebase}jsidplay2.png"> 
 <meta name="description" content="Java SID music player library v2">
 <meta name="author" content="Ken H&auml;ndel">
 <meta name="keywords" content="c64, emulator, java, music, sid, psid, commodore 64, jsidplay2, resid, resid-fp, chip tune">
@@ -170,12 +170,12 @@ Interface</A> page.</P>
 
   <P align=left><FONT size=6>Latest Beta</FONT></P>
   <DIV align=left><FONT size=4>Click here to <A 
-  href="${project.url}${project.name}-${project.version}.zip">Download</A> 
+  href="${codebase}${project.artifactId}-${project.version}.zip">Download</A> 
   JSIDPlay2 </FONT></DIV>
 
   <P align=left><FONT size=6>Java WebStart Live Demo - Latest Beta</FONT></P>
   <DIV align=left><FONT size=4>Click here to <A 
-  href="${project.url}${application.title}.html">Launch</A> 
+  href="${codebase}${project.name}.html">Launch</A> 
   JSIDPlay2 </FONT></DIV>
 
 <P align=left><FONT size=6>Releases</FONT></P>
@@ -188,12 +188,12 @@ download</FONT></P>
   <LI>
   <DIV align=left><FONT size=4>If you want to embed the player without a graphical user interface into your own web-page,
   just check out the <A 
-  href="${project.url}SIDPlay.htm">JavaScript API test page</A>.</FONT></DIV></LI>
+  href="${codebase}SIDPlay.htm">JavaScript API test page</A>.</FONT></DIV></LI>
   <LI>
   <DIV align=left><FONT size=4>If you want to compare the quality of this emulation with the real thing
   and own a <A href="http://www.hardsid.com/">HardSID4U</A> soundcard,
   then just download and start <A href="http://www.acid64.com">ACID64</A> (by Wilfred Bos) the recommended music player to play SID tunes on a real SID chip
-  and additionally download the <A href="${project.url}jsiddevice-${project.version}.jar">Network SID Device</A> (part of JSIDPlay2).
+  and additionally download the <A href="${codebase}jsiddevice-${project.version}.jar">Network SID Device</A> (part of JSIDPlay2).
   Now, using ACID64 you are able to switch between the real SID chip playback and the emulation on the fly.</FONT></DIV></LI>
 </UL>
 
