--- a/trunk/jsidplay2/src/main/deploy/c64jukebox/SIDPlay.htm
+++ b/trunk/jsidplay2/src/main/deploy/c64jukebox/SIDPlay.htm
@@ -21,7 +21,7 @@
 	</SCRIPT>
 
     <!-- This is the invisible applet -->
-    <applet name="jsidplay" code="c64jukebox.SIDPlay" archive="c64jukebox-${project.version}.jar,truezip-file-7.7.6.jar,truezip-kernel-7.7.6.jar,kickassembler-3.36.jar" WIDTH=0 HEIGHT=0 MAYSCRIPT >
+    <applet name="jsidplay" code="c64jukebox.SIDPlay" archive="c64jukebox-${project.version}.jar,kickassembler-3.36.jar" WIDTH=0 HEIGHT=0 MAYSCRIPT >
       <!-- This is only for autostart a SID tune (http/file/fileName/buildIn) -->
       <!--param name="playsid" value="http://www.hardsid.com/files/C64Music/MUSICIANS/J/Jeff/Donald_Dick-Duck.sid"-->
       <!--param name="playsid" value="file:///E/usb/Ken/Eclipse/workspace/jsidplay2/test/sid}/examples/Turrican_2-The_Final_Fight.sid"-->
