--- a/trunk/jsidplay2/src/main/deploy/jsidplay2/index.htm
+++ b/trunk/jsidplay2/src/main/deploy/jsidplay2/index.htm
@@ -85,7 +85,7 @@ To browse visit <a href="http://ss.webring.com/navbar?f=l;y=kenchis;u=defurl2">
 here</a>.</font></td></tr></table></td></tr></table></center></noscript>
 
 <P align=center><FONT size=7><A 
-href="https://sourceforge.net/projects/jsidplay2/">JSIDPlay2</A> - Homepage (modification date: 03.10.2012)</FONT></P>
+href="https://sourceforge.net/projects/jsidplay2/">JSIDPlay2</A> - Homepage (modification date: 27.02.2015)</FONT></P>
 <P align=left><FONT size=6>Introduction:</FONT></P>
 <P align=left><FONT size=4>I am a C64 fan since 1986 as many other people are. I 
 played games, watched demos and read books, but when the time goes by, all 
@@ -177,6 +177,11 @@ Interface</A> page.</P>
   <DIV align=left><FONT size=4>Click here to <A 
   href="${codebase}${project.name}.html">Launch</A> 
   JSIDPlay2 </FONT></DIV>
+
+  <P align=left><FONT size=6>Android Client Version Demo (my LapTop is the Server)</FONT></P>
+  <DIV align=left><FONT size=4>Click here to <A 
+  href="${codebase}${project.artifactId}app.apk">Get the Installer for</A> 
+  JSIDPlay2 App </FONT></DIV>
 
 <P align=left><FONT size=6>Releases</FONT></P>
 <P align=left><FONT size=4>Click <A 
