--- a/trunk/jsidplay2/src/main/deploy/c64jukebox/SIDPlay.htm
+++ b/trunk/jsidplay2/src/main/deploy/c64jukebox/SIDPlay.htm
@@ -39,8 +39,8 @@
 	<a href="javascript:document.jsidplay.useEmulation()">Use Emulation (then click on Play)</a><br>
 	<!-- set flag to use HardSID, you must call playSID after -->
 	<a href="javascript:document.jsidplay.useHardSID()">Use HardSID - The Legendary Sound (then click on Play)</a><br>
-	<!-- set flag to use chip 3 for chip type 6581 and 2 for 8580 -->
-	<a href="javascript:document.jsidplay.setChipDevice(3, 2)">Use HardSID Chip 3 for 6581 and Chip 2 for 8580 (then click on Play)</a><br>
+	<!-- set flag to use chip 2 for chip type 6581 and 1 for 8580 - value range: 0..N-1, N=installed chip count -->
+	<a href="javascript:document.jsidplay.setChipDevice(2, 1)">Use HardSID Chip 2 for 6581 and Chip 1 for 8580 (then click on Play)</a><br>
 	<a href="javascript:document.jsidplay.stopSID()">Stop</a><br>
 	<a href="javascript:document.jsidplay.pauseOrContinueSID()">Pause/Continue</a><br>
 	<H2>Get Status</H2>
