--- a/trunk/jsidplay2/src/main/deploy/c64jukebox/SIDPlay.htm
+++ b/trunk/jsidplay2/src/main/deploy/c64jukebox/SIDPlay.htm
@@ -21,7 +21,7 @@
 	</SCRIPT>
 
     <!-- This is the invisible applet -->
-    <applet name="jsidplay" code="c64jukebox.SIDPlay" archive="c64jukebox-${project.version}.jar,kickassembler-3.36.jar" WIDTH=0 HEIGHT=0 MAYSCRIPT >
+    <applet name="jsidplay" code="c64jukebox.SIDPlay" archive="online/webstart/c64jukebox-${project.version}.jar,online/webstart/kickassembler-3.36.jar" WIDTH=0 HEIGHT=0 MAYSCRIPT >
       <!-- This is only for autostart a SID tune (http/file/fileName/buildIn) -->
       <!--param name="playsid" value="http://www.hardsid.com/files/C64Music/MUSICIANS/J/Jeff/Donald_Dick-Duck.sid"-->
       <!--param name="playsid" value="file:///E/usb/Ken/Eclipse/workspace/jsidplay2/test/sid}/examples/Turrican_2-The_Final_Fight.sid"-->
@@ -30,9 +30,9 @@
 	<!-- controls -->
 	<H2>Control Player</H2>
 	<!-- play a SID (-1 means default song number, >0 is song number) -->
-	<a href="javascript:document.jsidplay.playSID('${codebase}Turrican_2-The_Final_Fight.sid', 9)">Play Turrican_2-The_Final_Fight.sid (Song 9)</a><br>
-    <a href="javascript:document.jsidplay.playSID('${codebase}Tapeloader.sid', -1)">Play Tapeloader.sid (Default Song)</a><br>
-    <a href="javascript:document.jsidplay.playSID('${codebase}NEI_Intro.sid', -1)">Play NEI_Intro.sid (Default Song)</a><br>
+	<a href="javascript:document.jsidplay.playSID('${codebase}files/C64Music/MUSICIANS/S/Siebold_Markus/Turrican_2-The_Final_Fight.sid', 9)">Play Turrican_2-The_Final_Fight.sid (Song 9)</a><br>
+    <a href="javascript:document.jsidplay.playSID('${codebase}files/C64Music/MUSICIANS/D/Danko_Tomas/Tapeloader.sid', -1)">Play Tapeloader.sid (Default Song)</a><br>
+    <a href="javascript:document.jsidplay.playSID('${codebase}files/C64Music/MUSICIANS/N/No_Sync/NEI_Intro.sid', -1)">Play NEI_Intro.sid (Default Song)</a><br>
 	<a href="javascript:document.jsidplay.nextSong()">Next Song</a><br>
 	<a href="javascript:document.jsidplay.previousSong()">Previous Song</a><br>
 	<!-- set flag to use emulation, you must call playSID after -->
@@ -46,9 +46,9 @@
 	<H2>Get Status</H2>
 	<!-- Get song count of the parametrized tune -->
 	<!-- Get the song count of the parametrized file, the file is read once and hashed -->
-	<a href="javascript:alert(document.jsidplay.getSongCount('${codebase}Turrican_2-The_Final_Fight.sid'))">Get Song Count of Turrican II</a><br>
+	<a href="javascript:alert(document.jsidplay.getSongCount('${codebase}files/C64Music/MUSICIANS/S/Siebold_Markus/Turrican_2-The_Final_Fight.sid'))">Get Song Count of Turrican II</a><br>
 	<!-- Get the default song of the parametrized tune, the file is read once and hashed -->
-	<a href="javascript:alert(document.jsidplay.getDefaultSong('${codebase}Tapeloader.sid'))">Get Default Song of Tapeloader</a><br>
+	<a href="javascript:alert(document.jsidplay.getDefaultSong('${codebase}files/C64Music/MUSICIANS/D/Danko_Tomas/Tapeloader.sid'))">Get Default Song of Tapeloader</a><br>
 	<!-- Get the song number that is currently played -->
 	<a href="javascript:alert(document.jsidplay.getCurrentSong())">Get Current Count</a><br>
 	<!-- Get the current time the song is playing -->
