--- a/jsidplay2/src/main/deploy/jsidplay2/index.htm
+++ b/jsidplay2/src/main/deploy/jsidplay2/index.htm
@@ -175,7 +175,7 @@ Interface</A> page.</P>
 
   <P align=left><FONT size=6>Java WebStart Live Demo - Latest Beta</FONT></P>
   <DIV align=left><FONT size=4>Click here to <A 
-  href="${codebase}${project.name}.html">Launch</A> 
+  href="${codebase}online/webstart/${project.name}.html">Launch</A> 
   JSIDPlay2 </FONT></DIV>
 
   <P align=left><FONT size=6>Android Client Version Demo (my LapTop is the Server)</FONT></P>
